common/objects/StoreStateCode__c/StoreStateCode__c.object-meta.xml
<CustomObject>
    <description>Valid state codes for a country code and webstore</description>
    <label>Store State Code</label>
    <nameField>
        <displayFormat>SSC-{0000000}</displayFormat>
        <label>StoreStateCode Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Store State Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>