common/objects/StoreStateCode__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>