common/objects/StoreStateCode__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <referenceTo>WebStore</referenceTo>
    <relationshipLabel>Store State Codes</relationshipLabel>
    <relationshipName>Store_State_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>