common/objects/StoreStateCode__c/fields/Store_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Store_Country_Code__c</fullName>
    <label>Store Country Code</label>
    <referenceTo>StoreCountryCode__c</referenceTo>
    <relationshipLabel>Store State Codes</relationshipLabel>
    <relationshipName>Store_State_Codes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>